@@ -1,4 +1,0 @@
-[Dolphin]
-PreviewsShown=true
-Timestamp=2014,10,30,0,41,7
-Version=3
