@@ -1,5 +1,0 @@
-[Dolphin]
-PreviewsShown=true
-SortRole=date
-Timestamp=2013,12,29,0,37,3
-Version=3
