@@ -1,4 +1,4 @@
-DEVELOPMENT VERSION
+DEVELOPMENT VERSION (1.0.2)
 
 - WFouput was removed from the framework. Now workflows should simply return a list with the information necessary for the calculation of the required performance metrics. Our provided evaluation functions (classificationMetrics and regressionMetrics) required some information from the result of the workflows (at least a component named "preds" containing a named vector of predicted values and another component named "trues" containing the corresponding vector of true values of the test cases). If you are using some of our provided standard workflows you do not need to worry about this because they return a list with such components. However, if using your own user-defined workflows and you want to use our evaluation functions then you need to worry abou this. In summary, if your code was using standard workflows and evaluation metrics provided by this package, then no changes should be needed to your code. However, if that is not the case then you may need to carry out some small changes to your workflows or your evaluation functions.
 
@@ -8,7 +8,9 @@ DEVELOPMENT VERSION
 
 - Functions getIterationInfo and getIterationPreds where renamed into getIterationsInfo and getIterationsPreds, respectively. They now have an additional functionality of allowing the user to obtain a list with the results of all iterations instead of only of a specific one, as before. Moreover, the results (either of a specific iteration or all of them) are of a different type. They use to be of class WFouput but now are simply lists, which is now the result of running any workflow.
 
+- There were some problems in the timeseries WF that were corrected
 
+- The metrics parameter of the EstimationTask constructor is now optional and it defaults to all metrics of the selected evaluation function.
 
 VERSION 1.0.1 (2015-06-17)
 
